[tool.poetry]
name = "khaanagpt"
version = "0.1.0"
description = ""
authors = ["shreydan <iamshreydan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.26.1"
torch = "^1.13.1"
gradio = "^3.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
